# Mental

./: .gitignore  CMakeLists.txt  helpers.h  main.cpp  markov.h
